# bco

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  draft.txt
examples/: CMakeLists.txt  main.cpp
include/: bco.h
include/bco/: bco.h  buffer.h  context.h  exception.h  executor.h  io.h  proactor.h  promise.h  task.h  utils.h
include/bco/coroutine/: channel.h  cofunc.h  task.h  task.inl
include/bco/detail/: proactor_linux.h  proactor_windows.h  promise_linux.h  promise_windows.h  task.inl  task_linux.h  task_windows.h  utils.h  utils.inl
include/bco/executor/: multithread_executor.h  simple_executor.h
include/bco/net/: address.h  event.h  socket.h  socket_address.h  tcp.h  udp.h
include/bco/net/proactor/: epoll.h  iocp.h  iouring.h  select.h
include/bco/proactor/: iocp.h  select.h
src/: buffer.cpp  common.cpp  common.h  context.cpp  executor.cpp  io.cpp  magic.h  proactor_windows.cpp  task.cpp  trick.cpp  utils.cpp
src/coroutine/: cofunc.cpp  task.cpp
src/executor/: multithread_executor.cpp  simple_executor.cpp
src/net/: address.cpp  event.cpp  tcp.cpp  udp.cpp
src/net/proactor/: epoll.cpp  iocp.cpp  iouring.cpp  select.cpp
src/proactor/: iocp.cpp  select.cpp
tests/: CMakeLists.txt  main.cpp
